apps/homepage/homepage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: media-server
  labels:
    app.kubernetes.io/name: homepage
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
    spec:
      serviceAccountName: homepage
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        fsGroup: 1000
      containers:
        - name: homepage
          image: "ghcr.io/gethomepage/homepage:v2.4"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/healthcheck
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
          volumeMounts:
            - mountPath: /app/config
              name: config
            # - mountPath: /app/config/custom.js
            #   name: homepage-config
            #   subPath: custom.js
            - mountPath: /app/config/custom.css
              name: custom-css-config
              subPath: custom.css
            - mountPath: /app/config/bookmarks.yaml
              name: bookmarks-config
              subPath: bookmarks.yaml
            # - mountPath: /app/config/docker.yaml
            #   name: homepage-config
            #   subPath: docker.yaml
            - mountPath: /app/config/kubernetes.yaml
              name: kubernetes-config
              subPath: kubernetes.yaml
            - mountPath: /app/config/services.yaml
              name: services-config
              subPath: services.yaml
            - mountPath: /app/config/settings.yaml
              name: settings-config
              subPath: settings.yaml
            - mountPath: /app/config/widgets.yaml
              name: widgets-config
              subPath: widgets.yaml
            - name: mediaserver-volume
              mountPath: /media
            - name: homepage-config
              mountPath: /assets
      volumes:
        - name: mediaserver-volume
          persistentVolumeClaim:
            claimName: mediaserver-rwo-pvc
        - name: homepage-config
          persistentVolumeClaim:
            claimName: homepage-config
        - name: custom-css-config
          configMap:
            name: custom-css
        - name: bookmarks-config
          configMap:
            name: bookmarks
        - name: kubernetes-config
          configMap:
            name: kubernetes
        - name: settings-config
          configMap:
            name: settings
        - name: services-config
          configMap:
            name: services
        - name: widgets-config
          configMap:
            name: widgets
        - name: config
          emptyDir: {}
